--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f6f6f6;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
+	border:2px solid blue;	
+}
+.left{
+	width:450px;
+	margin-top:70px;
+	display:inline-block;
+}
+.right{
+	
+}
+form{
+	display:flex;
+	flex-direction:column;
+	width:300px;
+	background-color:white;
+	padding:20px;
+	border-radius:5px;
+	box-shadow:0 0 10px #ccc;
+	gap:10px;
+}
+form>input{
+	border:1px solid #ccc;
+	border-radius:5px;
+	padding:10px;
+}
+form>a{
+	text-decoration:none;
+	color:#1877f2;
+}
+form>button{
+	background-color:#1877f2;
+	border-radius:5px;
+	padding:10px 20px;
+	border:none;
+	color:white;
+}
+.signup{
+	background-color:#42b72a;
+	border:none;
+	color:white;
