--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,14 @@ body{
 	background-color:white;
 	box-shadow:0 0 10px #ccc;
 	padding:20px;
-	gap:10px;
+	gap:20px;
 	border-radius:5px;
 }
 form{
 	display:flex;
 	flex-direction:column;
 	width:100%;
-	padding:20px;
+/* 	padding:20px; */
 	gap:10px;
 }
 form>input{
@@ -38,6 +38,7 @@ form>input{
 form>a{
 	text-decoration:none;
 	color:#1877f2;
+	margin:10px;
 	
 }
 form>button{
