--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ form{
 	display:flex;
 	flex-direction:column;
 	width:100%;
+	background-color:white;
 /* 	padding:20px; */
 	gap:10px;
 }
@@ -38,7 +39,7 @@ form>input{
 form>a{
 	text-decoration:none;
 	color:#1877f2;
-	margin:10px;
+	padding-top:10px;
 	
 }
 form>button{
